crates/squawk_parser/tests/snapshots/tests__create_user_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/create_user.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_USER
    CREATE_KW "create"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE
      IDENT "u"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_USER
    CREATE_KW "create"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    ROLE
      IDENT "u"
    WHITESPACE "\n   "
    ROLE_OPTION_LIST
      WITH_KW "with"
      WHITESPACE " "
      ROLE_OPTION_GENERIC
        IDENT "superuser"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nosuperuser"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nosuperuser"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "createdb"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nocreatedb"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "createrole"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nocreaterole"
      WHITESPACE "\n   "
      ROLE_OPTION_INHERIT
        INHERIT_KW "inherit"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "noinherit"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "login"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nologin"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "replication"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "noreplication"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "bypassrls"
      WHITESPACE "\n   "
      ROLE_OPTION_GENERIC
        IDENT "nobypassrls"
      WHITESPACE "\n   "
      ROLE_OPTION_CONNECTION_LIMIT
        CONNECTION_KW "connection"
        WHITESPACE " "
        LIMIT_KW "limit"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "100"
      WHITESPACE "\n   "
      ROLE_OPTION_ENCRYPTED_PASSWORD
        ENCRYPTED_KW "encrypted"
        WHITESPACE " "
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "'foo'"
      WHITESPACE "\n   "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        LITERAL
          STRING "'bar'"
      WHITESPACE "\n   "
      ROLE_OPTION_PASSWORD
        PASSWORD_KW "password"
        WHITESPACE " "
        NULL_KW "null"
      WHITESPACE "\n   "
      ROLE_OPTION_VALID_UNTIL
        VALID_KW "valid"
        WHITESPACE " "
        UNTIL_KW "until"
        WHITESPACE " "
        LITERAL
          STRING "'2042-02-22'"
      WHITESPACE "\n   "
      ROLE_OPTION_IN_ROLE
        IN_KW "in"
        WHITESPACE " "
        ROLE_KW "role"
        WHITESPACE " "
        ROLE_REF_LIST
          ROLE_REF
            ROLE_NAME_REF
              IDENT "foo"
          COMMA ","
          WHITESPACE " "
          ROLE_REF
            ROLE_NAME_REF
              IDENT "bar"
          COMMA ","
          WHITESPACE " "
          ROLE_REF
            ROLE_NAME_REF
              IDENT "buzz"
      WHITESPACE "\n   "
      ROLE_OPTION_IN_GROUP
        IN_KW "in"
        WHITESPACE " "
        GROUP_KW "group"
        WHITESPACE " "
        ROLE_REF_LIST
          ROLE_REF
            ROLE_NAME_REF
              IDENT "foo"
      WHITESPACE "\n   "
      ROLE_OPTION_ROLE
        ROLE_KW "role"
        WHITESPACE " "
        ROLE_REF_LIST
          ROLE_REF
            ROLE_NAME_REF
              IDENT "foo"
      WHITESPACE "\n   "
      ROLE_OPTION_ADMIN
        ADMIN_KW "admin"
        WHITESPACE " "
        ROLE_REF_LIST
          ROLE_REF
            ROLE_NAME_REF
              IDENT "foo"
      WHITESPACE "\n   "
      ROLE_OPTION_USER
        USER_KW "user"
        WHITESPACE " "
        ROLE_REF_LIST
          ROLE_REF
            ROLE_NAME_REF
              IDENT "foo"
      WHITESPACE "\n   "
      ROLE_OPTION_SYSID
        SYSID_KW "sysid"
        WHITESPACE " "
        LITERAL
          INT_NUMBER "100"
    SEMICOLON ";"
  WHITESPACE "\n\n"
