crates/squawk_parser/tests/snapshots/tests__discard_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/discard.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  DISCARD
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    DISCARD_TARGET
      ALL_KW "ALL"
    SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    DISCARD_TARGET
      PLANS_KW "PLANS"
    SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    DISCARD_TARGET
      SEQUENCES_KW "SEQUENCES"
    SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    DISCARD_TARGET
      TEMPORARY_KW "TEMPORARY"
    SEMICOLON ";"
  WHITESPACE "\n"
  DISCARD
    DISCARD_KW "DISCARD"
    WHITESPACE " "
    DISCARD_TARGET
      TEMP_KW "TEMP"
    SEMICOLON ";"
  WHITESPACE "\n\n"
