crates/squawk_parser/tests/snapshots/tests__do_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/do.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  DO
    DO_KW "DO"
    WHITESPACE " "
    LITERAL
      DOLLAR_QUOTED_STRING "$$DECLARE r record;\nBEGIN\n    FOR r IN SELECT table_schema, table_name FROM information_schema.tables\n             WHERE table_type = 'VIEW' AND table_schema = 'public'\n    LOOP\n        EXECUTE 'GRANT ALL ON ' || quote_ident(r.table_schema) || '.' || quote_ident(r.table_name) || ' TO webuser';\n    END LOOP;\nEND$$"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- do_with_language"
  WHITESPACE "\n"
  DO
    DO_KW "do"
    WHITESPACE " "
    DO_LANGUAGE
      LANGUAGE_KW "language"
      WHITESPACE " "
      LANGUAGE_REF
        IDENT "plpgsql"
    WHITESPACE " "
    LITERAL
      STRING "'select 1'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
