crates/squawk_parser/tests/snapshots/tests__drop_collation_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_collation.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_COLLATION
    DROP_KW "drop"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_COLLATION
    DROP_KW "drop"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_COLLATION
    DROP_KW "drop"
    WHITESPACE " "
    COLLATION_KW "collation"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    COLLATION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "a"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
