crates/squawk_parser/tests/snapshots/tests__drop_conversion_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/drop_conversion.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  DROP_CONVERSION
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_SEGMENT_REF
          IDENT "s"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  DROP_CONVERSION
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "foo"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    WHITESPACE " "
    CASCADE_KW "cascade"
    SEMICOLON ";"
  WHITESPACE "\n"
  DROP_CONVERSION
    DROP_KW "drop"
    WHITESPACE " "
    CONVERSION_KW "conversion"
    WHITESPACE " "
    IF_EXISTS
      IF_KW "if"
      WHITESPACE " "
      EXISTS_KW "exists"
    WHITESPACE " "
    CONVERSION_REF
      PATH_REF
        PATH_REF
          PATH_SEGMENT_REF
            IDENT "buzz"
        DOT "."
        PATH_SEGMENT_REF
          IDENT "b"
    WHITESPACE " "
    RESTRICT_KW "restrict"
    SEMICOLON ";"
  WHITESPACE "\n\n"
