crates/squawk_parser/tests/snapshots/tests__drop_database_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/drop_database.sql
---
SOURCE_FILE
  COMMENT "-- missing comma"
  WHITESPACE "\n"
  DROP_DATABASE
    DROP_KW "drop"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    DATABASE_REF
      IDENT "d"
    WHITESPACE " "
    DROP_DATABASE_FORCE_CLAUSE
      WITH_KW "with"
      WHITESPACE " "
      L_PAREN "("
      WHITESPACE " "
      FORCE
        FORCE_KW "force"
      WHITESPACE "  "
      FORCE
        FORCE_KW "force"
      WHITESPACE " "
      R_PAREN ")"
    SEMICOLON ";"
  WHITESPACE "\n"
---
error[syntax-error]: expected COMMA
  ╭▸ 
2 │ drop database d with ( force  force );
  ╰╴                            ━
